<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="@dimen/layout_width_05"
        android:layout_height="@dimen/layout_height_12"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/draw01"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/user_name"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/login_username_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/userPsw"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/login_usepsw_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/userRePsw"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/login_userepsw_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/realName"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/user_name"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/register_realname_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/phone"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/register_phone_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/qq"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/qq"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/register_qq_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_08">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/male"
                        android:checked="true"
                        android:text="@string/sex_man"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/female"
                        android:text="@string/sex_woman"/>
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/register"
                        android:gravity="center"
                        android:layout_width="@dimen/layout_width_02"
                        android:layout_height="@dimen/layout_height_04"
                        android:textColor="@android:color/white"
                        android:background="@drawable/draw02"
                        android:textSize="@dimen/text_size_14"
                        android:text="@string/to_register"/>
                    <TextView
                        android:id="@+id/cancel"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/layout_width_02"
                        android:layout_height="@dimen/layout_height_04"
                        android:textColor="@color/color_text_02"
                        android:background="@drawable/draw01"
                        android:textSize="@dimen/text_size_14"
                        android:text="@string/cancel"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>