<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">
        <include layout="@layout/meger_title_01" />
        <android.support.v4.widget.NestedScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/draw04">
                    <TextView
                        android:id="@+id/orderNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_02"
                        android:text="@string/order_no"/>
                    <TextView
                        android:id="@+id/orderDingTableNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/orderNo"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_02"
                        android:text="@string/order_dingtable_no"/>
                    <TextView
                        android:id="@+id/orderStatus"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_04"
                        android:text="@string/order_status"/>
                    <TextView
                        android:id="@+id/orderPeoples"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/orderStatus"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_02"
                        android:text="@string/order_peoples"/>
                    <TextView
                        android:id="@+id/orderUser"
                        android:layout_below="@+id/orderDingTableNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_02"
                        android:text="@string/order_user"/>
                    <TextView
                        android:id="@+id/orderTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/orderPeoples"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_02"
                        android:text="@string/order_time"/>
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/dishesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_10"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/draw05">
                    <TextView
                        android:id="@+id/orderTotalMoney"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@color/color_text_04"
                        android:text="@string/order_total"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:id="@+id/pay"
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/layout_width_02"
                        android:layout_height="@dimen/layout_height_04"
                        android:textSize="@dimen/text_size_14"
                        android:textColor="@android:color/white"
                        android:text="@string/order_pay"
                        android:gravity="center"
                        android:background="@drawable/draw02"/>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/commentL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:visibility="gone">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorPrimary">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/text_size_14"
                            android:textColor="@android:color/white"
                            android:text="您的评价"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@null">
                        <RatingBar
                            android:id="@+id/commentRating"
                            style="@style/roomRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:rating="0"
                            android:stepSize="0.5"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp" >
                        </RatingBar>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@null">
                        <TextView
                            android:id="@+id/comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_14"
                            android:textColor="@color/color_text_02"
                            android:maxLines="3"
                            android:layout_gravity="left"
                            android:ellipsize="none" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>