<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">
        <LinearLayout
            android:layout_width="@dimen/layout_width_05"
            android:layout_height="wrap_content"
            android:background="@drawable/draw01"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="text"
                    android:drawableLeft="@mipmap/user_name"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/login_username_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/userPsw"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/layout_height_07"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bg"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/login_usepsw_hit"
                    android:textColorHint="@color/color_text_01"
                    android:textColor="@color/color_text_02"
                    android:gravity="left|center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/login"
                        android:gravity="center"
                        android:layout_width="@dimen/layout_width_02"
                        android:layout_height="@dimen/layout_height_04"
                        android:textColor="@android:color/white"
                        android:background="@drawable/draw02"
                        android:textSize="@dimen/text_size_14"
                        android:text="@string/func_login"/>
                    <TextView
                        android:id="@+id/cancel"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/layout_width_02"
                        android:layout_height="@dimen/layout_height_04"
                        android:textColor="@color/color_text_02"
                        android:background="@drawable/draw01"
                        android:textSize="@dimen/text_size_14"
                        android:text="@string/to_register"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
</RelativeLayout>