<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">
    <android.support.v4.widget.NestedScrollView
        android:orientation="vertical"
        android:layout_width="@dimen/layout_width_01"
        android:layout_height="@dimen/layout_height_02"
        android:background="@drawable/draw01"
        android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:padding="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dishesImg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_03"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/dishesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_02"
                android:textSize="@dimen/text_size_16"
                android:layout_below="@+id/dishesImg"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/dishesPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_04"
                android:textSize="@dimen/text_size_16"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/dishesImg"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/dishesDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_02"
                android:textSize="@dimen/text_size_14"
                android:layout_below="@+id/dishesName"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true">
                <TextView
                    android:id="@+id/less"
                    android:layout_width="@dimen/layout_width_03"
                    android:layout_height="@dimen/layout_height_04"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_14"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:text="@string/func_less"
                    android:background="@color/colorPrimary"/>
                <EditText
                    android:id="@+id/num"
                    android:layout_width="@dimen/layout_width_03"
                    android:layout_height="@dimen/layout_height_05"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:textColor="@color/color_text_02"
                    android:textSize="@dimen/text_size_12"
                    android:gravity="center"
                    android:enabled="false"
                    android:background="@drawable/draw01"/>
                <TextView
                    android:id="@+id/plus"
                    android:layout_width="@dimen/layout_width_03"
                    android:layout_height="@dimen/layout_height_04"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@android:color/white"
                    android:text="@string/func_plus"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/order"
                    android:gravity="center"
                    android:layout_width="@dimen/layout_width_02"
                    android:layout_height="@dimen/layout_height_04"
                    android:textColor="@android:color/white"
                    android:background="@drawable/draw02"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/func_order"/>
                <TextView
                    android:id="@+id/cancel"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_width="@dimen/layout_width_02"
                    android:layout_height="@dimen/layout_height_04"
                    android:textColor="@color/color_text_02"
                    android:background="@drawable/draw01"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/func_cancel"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>